--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=4000
-DATABASE_URL=postgresql://pg:password@localhost:5432/blog
+DATABASE_URL=postgresql://root:password@localhost:5432/blog
 DATABASE_PASSWORD=password
 REDIS_URL=localhost:6379
 CORS_ORIGIN=http://localhost:3000
