--- a/package.json
+++ b/package.json
@@ -20,68 +20,68 @@
     "test:e2e": "jest --config test/swagger.json"
   },
   "dependencies": {
-    "@mikro-orm/core": "^5.4.2",
-    "@mikro-orm/nestjs": "^5.1.2",
-    "@mikro-orm/postgresql": "^5.4.2",
-    "@mikro-orm/reflection": "^5.4.2",
+    "@mikro-orm/core": "^5.7.12",
+    "@mikro-orm/nestjs": "^5.2.0",
+    "@mikro-orm/postgresql": "^5.7.12",
+    "@mikro-orm/reflection": "^5.7.12",
     "@mikro-orm/sql-highlighter": "^1.0.1",
-    "@nestjs/common": "^9.1.4",
-    "@nestjs/core": "^9.1.4",
-    "@nestjs/platform-express": "^9.1.4",
-    "@nestjs/swagger": "^6.1.2",
-    "aws-sdk": "^2.1237.0",
+    "@nestjs/cache-manager": "^2.0.1",
+    "@nestjs/common": "^10.0.3",
+    "@nestjs/core": "^10.0.3",
+    "@nestjs/platform-express": "^10.0.3",
+    "@nestjs/swagger": "^7.0.6",
+    "aws-sdk": "^2.1404.0",
     "bcryptjs": "^2.4.3",
-    "cache-manager": "^5.1.1",
+    "cache-manager": "^5.2.3",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "connect-redis": "^6.1.3",
-    "dotenv": "^16.0.3",
+    "class-validator": "^0.14.0",
+    "connect-redis": "^7.1.0",
+    "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
-    "ioredis": "^5.2.3",
+    "ioredis": "^5.3.2",
     "md5": "^2.3.0",
-    "nodemailer": "^6.8.0",
+    "nodemailer": "^6.9.3",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.5.7",
-    "sharp": "^0.31.1",
+    "rimraf": "^5.0.1",
+    "rxjs": "^7.8.1",
+    "sharp": "^0.32.1",
     "slug": "^8.2.2",
-    "swagger-ui-express": "^4.5.0",
+    "swagger-ui-express": "^4.6.3",
     "uuid": "^9.0.0",
-    "yup": "^0.32.11"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@mikro-orm/cli": "^5.4.2",
-    "@nestjs/cli": "^9.1.4",
-    "@nestjs/schematics": "^9.0.3",
-    "@nestjs/testing": "^9.1.4",
+    "@mikro-orm/cli": "^5.7.12",
+    "@nestjs/cli": "^10.0.5",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.3",
     "@types/bcryptjs": "^2.4.2",
-    "@types/connect-redis": "^0.0.18",
-    "@types/express": "^4.17.14",
-    "@types/express-session": "^1.17.5",
+    "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/ioredis": "^4.28.10",
-    "@types/jest": "29.2.0",
+    "@types/jest": "29.5.2",
     "@types/md5": "^2.3.2",
-    "@types/node": "^18.11.3",
-    "@types/nodemailer": "^6.4.6",
+    "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.8",
     "@types/redis": "^4.0.10",
-    "@types/sharp": "^0.31.0",
+    "@types/sharp": "^0.31.1",
     "@types/slug": "^5.0.3",
     "@types/supertest": "^2.0.12",
-    "@types/uuid": "^8.3.4",
+    "@types/uuid": "^9.0.2",
     "@types/yup": "^0.29.14",
-    "@typescript-eslint/eslint-plugin": "5.40.1",
-    "@typescript-eslint/parser": "5.40.1",
-    "eslint": "8.25.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "jest": "29.2.1",
-    "prettier": "^2.7.1",
-    "supertest": "^6.3.0",
-    "ts-jest": "29.0.3",
-    "ts-loader": "^9.4.1",
+    "@typescript-eslint/eslint-plugin": "5.60.0",
+    "@typescript-eslint/parser": "5.60.0",
+    "eslint": "8.43.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "jest": "29.5.0",
+    "prettier": "^2.8.8",
+    "supertest": "^6.3.3",
+    "ts-jest": "29.1.0",
+    "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.8.4"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
